# pptemp

./: .gitignore  LICENSE.md  README.md  pptemp.py  requirement.txt  sample.py  sample1.py  sample2_using_template.py  setup.cfg  test.pptx
example/: sample1.py  sample2_using_template.py
example/sample/: sample_template.pptx
pptemp/: __init__.py  pptemp.py
pptemp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sample_output/: sample1.pptx  sample2_using_template.pptx
