[metadata]
name = pptemp
version = 0.1.0
license = MIT
description = It enables you to make powerpoint files in a simple python commands.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ameyanagi
author_email =
URL = https://github.com/Ameyanagi/pptemp
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
keywords = powerpoint, pptx
download_url = https://github.com/Ameyanagi/pptemp

[options]

zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    python-pptx
    pandas
    numpy
    lxml
    Pillow
    tqdm
